<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiG TimeEdit Reader</string>
    <string name="app_language">en</string>

    <string name="action_settings">About</string>
    <string name="action_subscriptions">Subscriptions</string>
    <string name="action_update">Update</string>
    <string name="action_search">Search</string>

    <string name="subs_add">Add</string>
    <string name="subs_close_btn">Close</string>
    <string name="subs_title">Subscriptions</string>
    <string name="subs_unsubscribed">Unsubscribed: </string>
    <string name="subs_content_desc">Unsubscribe</string>

    <string name="add_title">Add subscription</string>
    <string name="add_search_btn">Search</string>
    <string name="add_retry_btn">Retry</string>
    <string name="add_search_hint">Class/Course name</string>
    <string name="add_net_failure">Something went wrong!</string>
    <string name="add_auto_pick">Adding subscription to: </string>
    <string name="add_field_empty">Please search for something sensible</string>
    <string name="add_field_illegal">Illegal character(s) in search string!</string>

    <string name="welcome_text">This is an app I made as a personal tool. I do not take responsibility if you happen to miss any lectures because of using this app. This app is also opensource. You will find the repository here: www.github.com/tobbentm.\n\nTo start, please add a class or course subscription:</string>
    <string name="welcome_nores_error">No results, please try again</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_retry_btn">Retry</string>
    <string name="welcome_search_btn">Search</string>
    <string name="welcome_search_hint">Class/Course name</string>
    <string name="welcome_net_failure">Something went wrong!</string>
    <string name="welcome_auto_pick">Adding subscription to: </string>
    <string name="welcome_field_empty">Please search for something sensible</string>

    <string name="timetable_today">Today</string>
    <string name="timetable_clear">Available</string>
    <string name="timetable_title">Timetable</string>
    <string name="timetable_no_update">Unable to update.\nPlease check your network connection.</string>
    <string name="timetable_room">Room</string>
    <string name="timetable_week">Week\t</string>
    <string name="timetable_lecturer">Lecturer</string>
    <string name="timetable_update_error">Could not update timetable.</string>

    <string name="sa_title">View timetable</string>
    <string name="sa_search_btn">Search</string>
    <string name="sa_search_hint">Search</string>
    <string name="sa_retry_btn">Retry</string>
    <string name="sa_recent_title">Recent</string>
    <string name="sa_recent_btn">Clear history</string>
    <string name="sa_auto_pick">Opening timetable for: </string>
    <string name="sa_info_text">In this view you may search for room, lecturer, class or course. These will not be added to your subscriptions.</string>

    <string name="about_title">About</string>
    <string name="about_close_btn">Close</string>
    <string name="about_version_append">You are running version:</string>
    <string name="about_main">You can find me at www.tobbentm.com\nRepository for this app at www.github.com/tobbentm\n\nLibraries used:\nandroid-async-http from loopj\nActionBar-PullToRefresh from chrisbanes\nOpenCSV from opencsv.sourceforge.net</string>

    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing timetable…</string>

    <string name="reserv_title">Reservations</string>

    <string name="sr_title">Study Rooms</string>
    <string name="sr_close_btn">Close</string>
    <string name="sr_taken">Taken</string>
    <string name="sr_network_error">Something went wrong!</string>

    <string name="widget_uknown_error">Uknown error. Try opening the app.</string>

    <string-array name="search_array">
        <item>Class</item>
        <item>Course</item>
        <item>Lecturer</item>
        <item>Room</item>
    </string-array>

    <string-array name="sa_search_array">
        <item>Class</item>
        <item>Course</item>
        <item>Lecturer</item>
        <item>Room</item>
    </string-array>

</resources>
