<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:icon="@drawable/action_search" />
    <item android:id="@+id/action_subs"
          android:title="@string/action_subscriptions"
          android:orderInCategory="10"
          android:showAsAction="never" />
    <item android:id="@+id/action_studyrooms"
        android:title="@string/sr_title"
        android:orderInCategory="15"
        android:showAsAction="never" />
    <item android:id="@+id/action_reserv"
        android:title="@string/reserv_title"
        android:orderInCategory="20"
        android:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
